--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,9 @@
 [theme]
 base = "light"
-primaryColor = "#4B8BBE"
-backgroundColor = "#F0F2F6"
-secondaryBackgroundColor = "#FFFFFF"
-textColor = "#262730"
+primaryColor = "#FF9F45"              
+backgroundColor = "#F5F3FF"            
+secondaryBackgroundColor = "#FFFFFF"   
+textColor = "#3D2C5F"                
 font = "Helvetica"
 
 [server]
